fix chagefailureRate
